--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,7 @@
         "lib": [ "es5", "es2015.promise", "es2015.iterable" ],
         "baseUrl": ".",
         "paths": {
-            "@microsoft/signalr": [
+            "wechat-app-signalr": [
                 "./signalr"
             ],
             "@microsoft/signalr-protocol-msgpack": [
